Fix stat alignment in mobile map teaser, fix mobile gallery image height

--- a/styles.css
+++ b/styles.css
@@ -203,6 +203,7 @@ a:hover {
     padding-top: 1em;
     width: 100%;
     justify-content: space-around;
+    align-items: flex-start;
   }
 }
 
